# MindWall

./: .dockerignore  .env.docker  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.md.bak  SECURITY.md  alembic.ini  architecture.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: .gitkeep  0001_create_users.py  0002_create_mailbox_profiles.py  0003_create_messages.py  0004_create_analysis.py  0005_create_quarantine_audit.py  0006_create_sync_tables.py  0007_create_policy_settings_alerts.py  0008_create_outbound_messages.py  0009_fix_base_timestamps.py
app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py
app/admin/: router.py
app/alerts/: __init__.py  models.py  service.py
app/analysis/: __init__.py  deterministic.py  models.py  ollama_client.py  prompt.py  service.py
app/audit/: __init__.py  service.py
app/auth/: router.py  schemas.py  service.py
app/db/: base.py  session.py
app/health/: router.py
app/mailboxes/: __init__.py  connectivity.py  models.py  router.py  schemas.py  service.py  sync_models.py  sync_router.py  sync_service.py  view_service.py
app/messages/: __init__.py  html_safe.py  models.py  parser.py  router.py  schemas.py  service.py  storage.py  urls.py
app/policies/: __init__.py  constants.py  models.py  service.py  verdict.py
app/proxies/: __init__.py
app/quarantine/: __init__.py  models.py  router.py  service.py
app/security/: __init__.py  crypto.py
app/templates/: base.html  index.html
app/users/: models.py
docs/: admin-guide.md  alerts-and-audit.md  analysis-engine.md  architecture-overview.md  configuration.md  database-and-migrations.md  getting-started.md  imap-proxy.md  index.md  mailbox-onboarding.md  mailbox-sync.md  message-lab.md  policy-engine.md  quarantine-workflow.md  roadmap.md  smtp-proxy.md  testing.md  troubleshooting.md
docs/installation/: docker.md  local.md
scripts/: .gitkeep  create_admin.py  entrypoint.sh  seed_imap_dev.py  smoke_test.py  verify_imap_proxy.py  verify_smtp_proxy.py
tests/: conftest.py
tests/integration/: test_admin_surfaces.py  test_analysis.py  test_app.py  test_auth.py  test_health.py  test_imap_proxy.py  test_mailboxes.py  test_message_lab.py  test_quarantine.py  test_smtp_proxy.py  test_sync_routes.py
tests/unit/: test_alerts_service.py  test_config.py  test_connectivity.py  test_crypto.py  test_deterministic.py  test_html_safe.py  test_imap_client.py  test_imap_server.py  test_imap_session.py  test_mailbox_service.py  test_message_parser.py  test_message_storage.py  (+12 more)
workers/: __init__.py  analysis_worker.py  imap_proxy.py  llm_worker.py  maintenance_worker.py  smtp_proxy.py
(+35 files in other folders)
